--- a/Expense-Tracker-App/package.json
+++ b/Expense-Tracker-App/package.json
@@ -10,9 +10,17 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@emotion/react": "^11.14.0",
+    "@emotion/styled": "^11.14.0",
+    "@headlessui/react": "^2.2.0",
+    "@heroicons/react": "^2.2.0",
+    "@mui/icons-material": "^6.4.2",
+    "@mui/material": "^6.4.2",
     "@tailwindcss/vite": "^4.0.0",
+    "@toolpad/core": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-router-dom": "^7.1.3",
     "tailwindcss": "^4.0.0"
   },
   "devDependencies": {
