--- a/Expense-Tracker-App/package.json
+++ b/Expense-Tracker-App/package.json
@@ -16,10 +16,12 @@
     "@heroicons/react": "^2.2.0",
     "@mui/icons-material": "^6.4.2",
     "@mui/material": "^6.4.2",
+    "@reduxjs/toolkit": "^2.5.1",
     "@tailwindcss/vite": "^4.0.0",
     "@toolpad/core": "^0.12.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-redux": "^9.2.0",
     "react-router-dom": "^7.1.4",
     "tailwindcss": "^4.0.0"
   },
