--- a/Expense-Tracker-App/package.json
+++ b/Expense-Tracker-App/package.json
@@ -29,6 +29,7 @@
     "@tiptap/react": "^2.11.5",
     "@tiptap/starter-kit": "^2.11.5",
     "@toolpad/core": "^0.12.0",
+    "appwrite": "^14.0.1",
     "date-fns": "^4.1.0",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
